@startuml
title Class Diagram for UpdateItemCommand Feature
skinparam classAttributeIconSize 0
hide circle
left to right direction

class "{abstract}\nCommand" as Command {
  + execute(inventory: Inventory, ui: UI)
}

class UpdateCommandParser {
  + parse(input: String)
}

class UpdateItemCommand {
  - categoryName: String
  - itemIndex: int
  - updates: Map<String, String>
  + execute(inventory: Inventory, ui: UI)
  - applyUpdates(item: Item)
  - updateCategorySpecificField(item: Item, field: String, value: String)
  - restoreFromSnapshot(item: Item, snapshot: ItemSnapshot)
}

class Inventory {
  + findCategoryByName(categoryName: String)
}

class Category {
  - name: String
  + getItemCount()
  + getItem(index: int)
  + getName()
}

class Item {
  - name: String
  - quantity: int
  - binLocation: String
  - expiryDate: String
  + getName()
  + setName(name: String)
  + setBinLocation(binLocation: String)
  + setQuantity(quantity: int)
  + setExpiryDate(expiryDate: String)
}

class CommonFieldParser {
  + parseQuantity(quantityString: String)
  + validateExpiryDate(expiryDate: String)
}

class DuplicateIdentityParser {
  + findDuplicateItem(category: Category, candidate: Item): Item
  + buildBatchIdentityKey(category: String, target: Item): String
}

class DuplicateItemException

class UI {
  + showItemUpdated(...)
  + showError(message: String)
}

note as N1
  The update map can contain one or more
  supported fields such as newItem, bin,
  qty, and expiryDate.
  The duplicate-batch check now uses the same
  DuplicateIdentityParser.findDuplicateItem(...)
  call pattern as AddItemCommand.
end note

Command <|-- UpdateItemCommand
UpdateCommandParser ..> UpdateItemCommand : creates
UpdateItemCommand --> Inventory : queries through
UpdateItemCommand --> Category : retrieves item from
UpdateItemCommand --> Item : updates
UpdateItemCommand ..> CommonFieldParser : validates with
UpdateItemCommand ..> DuplicateIdentityParser : finds duplicate with
UpdateItemCommand ..> DuplicateItemException : throws on duplicate
UpdateItemCommand --> UI : shows result via
Inventory "1" o-- "*" Category
Category "1" o-- "*" Item
@enduml
